# expense-tracker-api

./: .env  README.md  app.py  build.sh  error_handlers.py  main.py  netlify.toml  pyproject.toml  requirements.txt  test.py
app/: __init__.py
app/http/: expenses.py  users.py
app/routes/: expenses.py  users.py
blueprints/: __init__.py
blueprints/routes/: users.py
src/: .gitignore  README.md  api.py  logging.py  main.py  pyproject.toml  requirements.txt
src/auth/: controller.py  model.py  service.py
src/database/: core.py
src/entities/: core.py
src/expenses/: controller.py  model.py  service.py
static/: style.css
templates/: 400.html  add-expense.html  base.html  edit-expense.html  error.html  home.html  login.html  navbar.html  signup.html
