[project]
name = "expense-tracker-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "flask==3.1.0",
    "flask-bcrypt==1.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-limiter==3.9.2",
    "flask-wtf==1.2.2",
    "psycopg2-binary>=2.9.10",
    "pyjwt==2.3.0",
    "python-dotenv==1.0.1",
    "python-jwt==4.1.0",
    "requests>=2.32.5",
    "supabase==2.13.0",
    "wtforms>=3.2.1",
]
